[gd_scene load_steps=11 format=3 uid="uid://do661gv2o5pbk"]

[ext_resource type="Script" path="res://scenes/obstacles/barriers/basebarrier/base_barrier.gd" id="1_6c3gr"]
[ext_resource type="PackedScene" uid="uid://qsdfg75wpc0t" path="res://scenes/Utilities/perspectiverenderer/perspective_renderer.tscn" id="2_tjqxh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o15up"]
size = Vector2(62.5261, 63.4561)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_fusls"]
polygon = PackedVector2Array(-32, 32, -32, -32, 32, -32, 32, 32)

[sub_resource type="Gradient" id="Gradient_53hy6"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_r5k5m"]
gradient = SubResource("Gradient_53hy6")

[sub_resource type="Gradient" id="Gradient_3tas0"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_81joi"]
gradient = SubResource("Gradient_3tas0")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xdesd"]
resource_local_to_scene = true
size = Vector2(64, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aywjf"]
size = Vector2(64.4801, 63.4561)

[node name="BaseBarrier" type="StaticBody2D" groups=["barriers"]]
collision_layer = 4
collision_mask = 0
script = ExtResource("1_6c3gr")
platform_color = Color(1, 1, 1, 0)

[node name="LightDetector" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 16392

[node name="CollisionShape2D" type="CollisionShape2D" parent="LightDetector"]
shape = SubResource("RectangleShape2D_o15up")

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_fusls")

[node name="PerspectiveRenderer" parent="." instance=ExtResource("2_tjqxh")]

[node name="BackgroundSprite" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = SubResource("GradientTexture2D_r5k5m")

[node name="LineSprite" type="Sprite2D" parent="."]
position = Vector2(9.53674e-07, 9.53674e-07)
texture = SubResource("GradientTexture2D_81joi")

[node name="BarrierCollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_xdesd")

[node name="PlatformDetector" type="Area2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlatformDetector"]
shape = SubResource("RectangleShape2D_aywjf")
